--- a/package.json
+++ b/package.json
@@ -9,14 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~54.0.30",
-    "expo-status-bar": "~3.0.9",
-    "react": "19.1.0",
-    "react-native": "0.81.5"
+    "expo": "53.0.11",
+    "expo-apple-authentication": "8.0.7",
+    "expo-camera": "~16.1.8",
+    "expo-font": "~13.3.1",
+    "expo-router": "~5.1.0",
+    "expo-splash-screen": "~0.30.9",
+    "expo-status-bar": "~2.2.3",
+    "expo-web-browser": "~14.1.6",
+    "react": "19.0.0",
+    "react-native": "0.79.3",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1"
   },
   "devDependencies": {
-    "@types/react": "~19.1.0",
-    "typescript": "~5.9.2"
+    "@types/react": "~19.0.10",
+    "typescript": "5.8.3"
   },
   "private": true
 }
