--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@supabase/supabase-js": "^2.89.0",
     "expo": "53.0.11",
     "expo-apple-authentication": "8.0.7",
+    "expo-auth-session": "^7.0.10",
     "expo-camera": "~16.1.8",
+    "expo-crypto": "^15.0.8",
     "expo-font": "~13.3.1",
     "expo-router": "~5.1.0",
     "expo-splash-screen": "~0.30.9",
@@ -20,10 +24,12 @@
     "react": "19.0.0",
     "react-native": "0.79.3",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1"
+    "react-native-screens": "~4.11.1",
+    "react-native-url-polyfill": "^3.0.0"
   },
   "devDependencies": {
     "@types/react": "~19.0.10",
+    "jsonwebtoken": "^9.0.3",
     "typescript": "5.8.3"
   },
   "private": true
