--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-navigation/bottom-tabs": "^7.9.0",
+    "@react-navigation/native": "^7.1.26",
     "@supabase/supabase-js": "^2.89.0",
     "expo": "53.0.11",
     "expo-apple-authentication": "8.0.7",
