--- a/package.json
+++ b/package.json
@@ -3,22 +3,25 @@
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --clear",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.9.0",
     "@react-navigation/native": "^7.1.26",
     "@supabase/supabase-js": "^2.89.0",
     "expo": "53.0.11",
     "expo-apple-authentication": "8.0.7",
+    "expo-asset": "~11.1.7",
     "expo-auth-session": "^7.0.10",
     "expo-camera": "~16.1.8",
     "expo-crypto": "^15.0.8",
     "expo-font": "~13.3.1",
+    "expo-haptics": "~14.1.4",
     "expo-router": "~5.1.0",
     "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
