--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "expo-web-browser": "~14.1.6",
     "react": "19.0.0",
     "react-native": "0.79.3",
+    "react-native-qrcode-svg": "^6.3.21",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-svg": "^15.15.1",
     "react-native-url-polyfill": "^3.0.0"
   },
   "devDependencies": {
