style: install, configure, and run eslint

--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "format": "prettier --write \"**/*.{js,ts,tsx,json,md,css,scss,mdx}\"",
     "format:check": "prettier --check \"**/*.{js,ts,tsx,json,md,css,scss,mdx}\"",
     "ios": "expo start --ios",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx .",
+    "lint:fix": "eslint --fix --ext .js,.jsx,.ts,.tsx .",
     "start": "expo start --clear",
     "web": "expo start --web"
   },
@@ -38,6 +40,15 @@
   },
   "devDependencies": {
     "@types/react": "~19.0.10",
+    "@typescript-eslint/eslint-plugin": "^8.50.1",
+    "@typescript-eslint/parser": "^8.50.1",
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-native": "^5.0.0",
     "jsonwebtoken": "^9.0.3",
     "prettier": "^2.8.8",
     "typescript": "5.8.3"
