--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "lint": "eslint --ext .js,.jsx,.ts,.tsx .",
     "lint:fix": "eslint --fix --ext .js,.jsx,.ts,.tsx .",
     "start": "expo start --clear",
+    "test": "jest",
+    "test:coverage": "jest --coverage",
+    "test:watch": "jest --watch",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -39,9 +42,17 @@
     "react-native-url-polyfill": "^3.0.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.28.5",
+    "@babel/preset-react": "^7.28.5",
+    "@babel/preset-typescript": "^7.28.5",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^13.3.3",
+    "@types/jest": "^30.0.0",
     "@types/react": "~19.0.10",
     "@typescript-eslint/eslint-plugin": "^8.50.1",
     "@typescript-eslint/parser": "^8.50.1",
+    "babel-jest": "^30.2.0",
+    "babel-preset-expo": "^54.0.9",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-import-resolver-typescript": "^4.4.4",
@@ -49,8 +60,12 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-native": "^5.0.0",
+    "jest": "^29.7.0",
+    "jest-expo": "^54.0.16",
     "jsonwebtoken": "^9.0.3",
     "prettier": "^2.8.8",
+    "react-test-renderer": "^19.0.0",
+    "ts-jest": "^29.4.6",
     "typescript": "5.8.3"
   },
   "private": true
