--- a/package.json
+++ b/package.json
@@ -4,6 +4,12 @@
   "main": "index.ts",
   "scripts": {
     "android": "expo start --android",
+    "build:android:dev": "eas build --platform android --profile development",
+    "build:android:preview": "eas build --platform android --profile preview",
+    "build:android:prod": " eas build --platform android --profile production",
+    "build:ios:dev": "eas build --platform ios --profile development",
+    "build:ios:preview": "eas build --platform ios --profile preview",
+    "build:ios:prod": "eas build --platform ios --profile production",
     "format": "prettier --write \"**/*.{js,ts,tsx,json,md,css,scss,mdx}\"",
     "format:check": "prettier --check \"**/*.{js,ts,tsx,json,md,css,scss,mdx}\"",
     "ios": "expo start --ios",
@@ -18,15 +24,19 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-google-signin/google-signin": "^16.1.1",
     "@react-navigation/bottom-tabs": "^7.9.0",
     "@react-navigation/native": "^7.1.26",
     "@supabase/supabase-js": "^2.89.0",
+    "eas": "^0.1.0",
+    "eas-cli": "^16.24.1",
     "expo": "53.0.11",
     "expo-apple-authentication": "8.0.7",
     "expo-asset": "~11.1.7",
     "expo-auth-session": "^7.0.10",
     "expo-camera": "~16.1.8",
     "expo-crypto": "^15.0.8",
+    "expo-dev-client": "~5.2.0",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-router": "~5.1.0",
